manifests/API/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  payment-service
  namespace: api
  labels:
    app:  payment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app:  payment-service
    spec:
      containers:
      - name:  payment-service
        image:  alhon05/gosimplecrud:v12
        ports:
        - containerPort: 4005

---
#Service
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: api
spec:
  selector:
    app: payment-service
  # Should be typed ClusterIP - NodePort if you want to bypass the ingress and fortforward the traffic to the desired port just for testing purposes only
  # Port forward using  - kubectl port-forward pod/pod-name 4005:4005
  type: ClusterIP 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4005
